tests/machine/x/st/dataset_where_filter.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:27Z
"
| adults people |
people := {Dictionary from: {'name' -> 'Alice'. 'age' -> 30}. Dictionary from: {'name' -> 'Bob'. 'age' -> 15}. Dictionary from: {'name' -> 'Charlie'. 'age' -> 65}. Dictionary from: {'name' -> 'Diana'. 'age' -> 45}}.
adults := [ | tmp |
  tmp := OrderedCollection new.
  people do: [:person |
    ((person.age >= 18)) ifTrue: [
      tmp add: Dictionary from: {'name' -> person.name. 'age' -> person.age. 'is_senior' -> (person.age >= 60)}.
    ].
  ].
  tmp
] value.
Transcript show: '--- Adults ---'; cr.
adults do: [:person |
  Transcript show: (person.name) printString; show: ' '; show: 'is'; show: ' '; show: (person.age) printString; show: ' '; show: ((person.is_senior) ifTrue: [' (senior)'] ifFalse: ['']) printString; cr.
]
.
